--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-
 /mods/.idea
 /mods/dash
 /mods/megajump
 /mods/step
 /mods/veinminer
+/mods/fabric-example-mod-1.19
