--- a/mods/QuirkyAbilities/gradle.properties
+++ b/mods/QuirkyAbilities/gradle.properties
@@ -1,14 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19
-yarn_mappings=1.19+build.4
-loader_version=0.14.8
+	# check these on https://fabricmc.net/develop
+	minecraft_version=1.19
+	yarn_mappings=1.19+build.1
+	loader_version=0.14.6
+
 # Mod Properties
-mod_version=1.0
-maven_group=net.irewiewer.quirkyabilities
-archives_base_name=quirkyabilities
+	mod_version = 1.0.0
+	maven_group = com.example
+	archives_base_name = fabric-example-mod
+
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.56.3+1.19
+	fabric_version=0.55.1+1.19
